--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "shivani",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "*",
     "body-parser": "*",
     "connect-flash": "*",
